# simple-calculator-qt

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  calculator  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
calculator_autogen/EWIEGA46WW/: moc_mainwindow.cpp  qrc_resources.cpp
calculator_autogen/include/: ui_mainwindow.h
helloworld_autogen/include/: ui_mainwindow.h
